fix: remove absolute positioning on mobile

--- a/app/themes/hunger-tv/assets/styles/components/carousel.scss
+++ b/app/themes/hunger-tv/assets/styles/components/carousel.scss
@@ -62,13 +62,16 @@
 }
 
 @media (max-width: $md-max) {
-	// .carousel__control--prev {
-	// display: none !important;
-	// }
-
 	.carousel .image {
 		width: auto !important;
 		height: auto !important;
+		padding-bottom: 0 !important;
+
+		img {
+			position: static;
+			width: auto;
+			height: auto;
+		}
 	}
 }
 
